[gd_scene load_steps=7 format=3 uid="uid://fbpbxpmuqx3g"]

[ext_resource type="Script" path="res://Scripts/Characters/Merchants/vendor.gd" id="1_dycj1"]
[ext_resource type="PackedScene" uid="uid://bcj7lff1v3mff" path="res://Sandbox/ShopMenu3D.tscn" id="2_j1xsu"]

[sub_resource type="BoxShape3D" id="BoxShape3D_e4osp"]

[sub_resource type="BoxMesh" id="BoxMesh_3mhll"]

[sub_resource type="BoxShape3D" id="BoxShape3D_uueeb"]
size = Vector3(3, 3, 3)

[sub_resource type="QuadMesh" id="QuadMesh_jh2oj"]
resource_local_to_scene = true
size = Vector2(3, 2)

[node name="Vendor" type="Node3D"]
script = ExtResource("1_dycj1")

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("BoxShape3D_e4osp")

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D"]
mesh = SubResource("BoxMesh_3mhll")

[node name="Area3D" type="Area3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.18891, -0.0110334, -0.144433)
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D/Area3D"]
shape = SubResource("BoxShape3D_uueeb")

[node name="VendorCamera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.23736, 0.541379, 2.56472)
fov = 90.0
near = 0.1
far = 100.0

[node name="ShopMenu3D" parent="." instance=ExtResource("2_j1xsu")]
transform = Transform3D(1.43405, 0, 0, 0, 1.24105, 0, 0, 0, 1, 2.8589, 0.898019, 0)

[node name="MeshInstance3D" parent="ShopMenu3D" index="2"]
mesh = SubResource("QuadMesh_jh2oj")

[connection signal="costumer_left" from="." to="ShopMenu3D/ShopHandler" method="_on_vendor_costumer_left"]
[connection signal="got_costumer" from="." to="ShopMenu3D/ShopHandler" method="_on_vendor_got_costumer"]
[connection signal="body_entered" from="StaticBody3D/Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="StaticBody3D/Area3D" to="." method="_on_area_3d_body_exited"]

[editable path="ShopMenu3D"]
